<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        card_view:cardCornerRadius="@dimen/card_corner_radius">

        <ImageView
            android:id="@+id/image_place"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:background="#7F000000"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/text_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@android:color/white"
                tools:text="@string/address" />

            <TextView
                android:id="@+id/text_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/white"
                tools:text="@string/tags" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
