<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_place"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="TextView"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tv_type"
                    android:text="@string/prices"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_prices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView5"
                    android:layout_marginBottom="10dp"
                    android:text="TextView"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/text_name"
                    android:text="@string/type"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView6"
                    android:layout_marginBottom="10dp"
                    android:text="TextView"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tv_district"
                    android:layout_below="@+id/text_name"
                    android:text="@string/district"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_district"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView8"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:text="TextView"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tv_district"
                    android:layout_below="@+id/tv_district"
                    android:text="@string/address"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView10"
                    android:layout_below="@+id/textView10"
                    android:layout_marginBottom="10dp"
                    android:text="TextView"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tv_worktime"
                    android:text="@string/tags"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView19"
                    android:layout_marginBottom="10dp"
                    android:text="TextView"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tv_address"
                    android:layout_below="@+id/tv_address"
                    android:text="@string/work_time"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_worktime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView21"
                    android:layout_below="@+id/textView21"
                    android:layout_marginBottom="10dp"
                    android:text="TextView"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tv_tags"
                    android:text="@string/description"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView23"
                    android:layout_marginBottom="10dp"
                    android:text="TextView"
                    android:textSize="18sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_new_review"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/ic_action_name"
                    android:text="@string/new_review" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/text_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/reviews" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/text_reviews" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
